public/css/style.css
body {
    font-family: Arial;
    font-size: 14px;
}
.logo {
    /*font-size: 100px;*/
    font-weight: bolder;
    letter-spacing: -6px;
    color: rgb(8,114,186);
    margin: 5px 80px;
}
.logo .number {
    color: rgb(8,114,186);
    opacity: 0.1;
}
.navigation {
    margin-left: 80px;
}

@media screen and (min-width: 1360px) {
    .logo {
        margin: 5px 15%;
    }
    .navigation {
        margin-left: 15%;
    }
}
.navigation a {
    display: inline-block;
    padding: 10px 15px;
    text-decoration: none;
    font-size: 14px;
    text-transform: uppercase;
    font-weight: bold;
    border: 2px solid rgb(8,114,186);
    background: rgb(8,114,186);
    color: #fff;
}
.navigation a:hover {
    /*color: #222;*/
    color: rgb(8,114,186);
    background: transparent;
    text-decoration: none;
}
.container {
    border: 1px solid #ddd;
    padding: 20px;
    margin: 20px;
    
}
/*.container a {
    color: #222;
}
.container table {
    font-size: 11px;
    margin-top: 20px;
}
.container table thead td {
    background-color: #f5f5f5;
    padding: 4px 10px;
}
.container table tbody td {
    padding: 4px 10px;
}
.container .box {
    border-top: 1px solid #ddd;
    padding-top: 10px;
    margin-top: 30px;
}
/*.container input {
    background-color: #f5f5f5;
    border: 0;
    padding: 5px 10px;
}
.container input[type="submit"] {
    background-color: #ccc;
    cursor: pointer;
}
.container input[type="submit"]:hover {
    background-color: #222;
    color: #fff;
}
.container button {
    background-color: #ccc;
    border: 0;
    padding: 5px 10px;
    cursor: pointer;
}
.container button:hover {
    background-color: #222;
    color: #fff;
}
*/

